--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-  
 * {
   margin:0;
   padding:0;
@@ -214,6 +213,10 @@ p {
   margin-bottom: 3vw;
 }
 
+.lf-container > p {
+  font-size: 2.5vw;
+}
+
 #items {
   color: #FF5A09;
 }
@@ -411,9 +414,3 @@ flex-direction: column;
 p {
   text-shadow: none;
 }
-
-
-
-
-
-
